--- a/AzureBot.Azure.Management/packages.config
+++ b/AzureBot.Azure.Management/packages.config
@@ -3,12 +3,12 @@
   <package id="Hyak.Common" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Azure.Common" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Azure.Common.Dependencies" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.Azure.Management.Automation" version="2.0.0" targetFramework="net452" />
+  <package id="Microsoft.Azure.Management.Automation" version="2.0.1" targetFramework="net452" />
   <package id="Microsoft.Azure.Management.Compute" version="9.1.0" targetFramework="net452" />
   <package id="Microsoft.Azure.Management.Resources" version="2.20.0-preview" targetFramework="net452" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net452" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net452" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1-beta1" targetFramework="net452" />
 </packages>
