--- a/AzureBot/packages.config
+++ b/AzureBot/packages.config
@@ -8,30 +8,42 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.Bot.Builder" version="1.2.3" targetFramework="net46" />
+  <package id="Microsoft.Bot.Builder" version="1.2.4" targetFramework="net46" />
   <package id="Microsoft.Bot.Connector" version="1.1.0.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.2.2" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.2.2" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="1.2.2" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="1.2.2" targetFramework="net46" />
   <package id="Microsoft.Identity.Client" version="1.0.304142221-alpha" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.11.305310302-alpha" targetFramework="net46" />
   <package id="Microsoft.Rest.ClientRuntime" version="1.8.2" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1-beta1" targetFramework="net46" />
+  <package id="System.AppContext" version="4.0.0" targetFramework="net46" />
   <package id="System.Collections" version="4.0.11-rc2-24027" targetFramework="net46" />
   <package id="System.Collections.Concurrent" version="4.0.12-rc2-24027" targetFramework="net46" />
+  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net46" />
   <package id="System.ComponentModel" version="4.0.1-rc2-24027" targetFramework="net46" />
   <package id="System.Diagnostics.Debug" version="4.0.11-rc2-24027" targetFramework="net46" />
+  <package id="System.Diagnostics.StackTrace" version="4.0.0" targetFramework="net46" />
   <package id="System.Diagnostics.Tools" version="4.0.1-rc2-24027" targetFramework="net46" />
   <package id="System.Globalization" version="4.0.11-rc2-24027" targetFramework="net46" />
   <package id="System.IO" version="4.1.0-rc2-24027" targetFramework="net46" />
+  <package id="System.IO.FileSystem" version="4.0.0" targetFramework="net46" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.0" targetFramework="net46" />
   <package id="System.Linq" version="4.1.0-rc2-24027" targetFramework="net46" />
   <package id="System.Linq.Expressions" version="4.0.11-rc2-24027" targetFramework="net46" />
   <package id="System.Net.Http" version="4.0.1-rc2-24027" targetFramework="net46" />
   <package id="System.Net.Primitives" version="4.0.11-rc2-24027" targetFramework="net46" />
   <package id="System.Reflection" version="4.1.0-rc2-24027" targetFramework="net46" />
   <package id="System.Reflection.Extensions" version="4.0.1-rc2-24027" targetFramework="net46" />
+  <package id="System.Reflection.Metadata" version="1.2.0" targetFramework="net46" />
   <package id="System.Reflection.Primitives" version="4.0.1-rc2-24027" targetFramework="net46" />
   <package id="System.Resources.ResourceManager" version="4.0.1-rc2-24027" targetFramework="net46" />
   <package id="System.Runtime" version="4.1.0-rc2-24027" targetFramework="net46" />
   <package id="System.Runtime.Extensions" version="4.1.0-rc2-24027" targetFramework="net46" />
+  <package id="System.Runtime.Handles" version="4.0.0" targetFramework="net46" />
   <package id="System.Runtime.InteropServices" version="4.1.0-rc2-24027" targetFramework="net46" />
   <package id="System.Runtime.Serialization.Json" version="4.0.2-rc2-24027" targetFramework="net46" />
   <package id="System.Runtime.Serialization.Primitives" version="4.1.1-rc2-24027" targetFramework="net46" />
